--- a/ticTacToe.html
+++ b/ticTacToe.html
@@ -4,22 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheett" href="normalize.css"/>
+    <link rel="stylesheet" href="normalize.css"/>
     <link rel="stylesheet" href="styles.css"/>
 </head>
 <body>
-    <h1>Tic Tac Toe</h1>
-    <div id="container">
-        <div class="box" id="top-left"></div>
-        <div class="box" id="top-mid"></div>
-        <div class="box" id="top-right"></div>
-        <div class="box" id="mid-left"></div>
-        <div class="box" id="mid-mid"></div>
-        <div class="box" id="mid-right"></div>
-        <div class="box" id="bottom-left"></div>
-        <div class="box" id="bottom-mid"></div>
-        <div class="box" id="bottom-right"></div>
-    </div>
     <script src="script.js"></script>
     <script src="dom.js"></script>
 </body>
