--- a/ticTacToe.html
+++ b/ticTacToe.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="normalize.css"/>
-    <link rel="stylesheet" href="styles.css"/>
+    <link rel="stylesheet" href="/normalize.css"/>
+    <link rel="stylesheet" href="/styles.css"/>
 </head>
 <body>
-    <script src="script.js"></script>
-    <script src="dom.js"></script>
+    <script src="/script.js"></script>
 </body>
 </html>
